<resources>
    <string name="app_name">KeSi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps_button">Submit</string>
    <string name="submitScore">Your Score: %d</string>
    <string name="return_home_button">Return Home button</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="item_4">Item 4</string>
    <string name="item_5">Item 5</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboardItem">User: %s Score: %s</string>
    <string name="permission_location_rationale">The app needs location access to run</string>
    <string name="ok">Ok</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">oRbz7DKOAUF0XR3GEu4OxnYNbwi5S5cVy6pO9Dbk</string>
    <string name="back4app_client_key">OIn8Ddtjp8ZnV6jlIXeC7KZqwWvj2TixCwnImfGM</string>
    <string name="close_leaderboard">Close leaderboard</string>
    <string name="deduction_description">   Each hint gives you a deduction!   </string>
    <string name="take_a_guess">Take a guess!</string>
</resources>