<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mapFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.MapFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/google_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <Button
        android:id="@+id/maps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/maps_button"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/submitScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submitScore"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/rounded_silver_score"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/returnHomeButton"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/return_arrow"
        android:scaleType="centerInside"
        android:contentDescription="@string/return_home_button" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
    android:background="@drawable/rounded_black"
    android:padding="20dp"
    android:visibility="gone"
    android:layout_marginHorizontal="20dp">




            <TextView
                android:id="@+id/leaderboardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="32sp"
                android:text="@string/leaderboard"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close_leaderboard"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/leaderboard"
            app:layout_constraintStart_toStartOf="@+id/leaderboard"
            />






        <TextView
            android:id="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_gold"
            android:paddingBottom="10dp"
            android:layout_marginHorizontal="0dp"
            app:layout_constraintTop_toBottomOf="@+id/leaderboardTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_silver"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/item1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             />

        <TextView
            android:id="@+id/item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bronze"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/item2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             />

        <TextView
            android:id="@+id/item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            app:layout_constraintTop_toBottomOf="@+id/item3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             />

        <TextView
            android:id="@+id/item5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            app:layout_constraintTop_toBottomOf="@+id/item4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


</androidx.constraintlayout.widget.ConstraintLayout>







</RelativeLayout>